@@ -130,315 +130,24 @@ rpm	alias --needswhat -q --qf '[%{needswhat}\n]' \
 	--POPTdesc=$"list prerequisite packages of args"
 
 #==============================================================================
-rpm	alias --yum:primary.xml --qf '\
-<package type="rpm">\
-\n  <name>%{NAME:cdata}</name>\
-\n  <arch>%{ARCH:cdata}</arch>\
-\n  <version epoch="%|EPOCH?{%{EPOCH}}:{0}|" ver="%{VERSION:cdata}" rel="%{RELEASE:cdata}"/>\
-\n  <checksum type="sha" pkgid="NO">%|HDRID?{%{HDRID}}:{XXX}|</checksum>\
-\n  <summary>%{SUMMARY:cdata}</summary>\
-\n  <description>%{DESCRIPTION:cdata}</description>\
-\n  <packager>%|PACKAGER?{%{PACKAGER:cdata}}:{}|</packager>\
-\n  <url>%|URL?{%{URL:cdata}}:{}|</url>\
-\n  <time file="%{PACKAGETIME}" build="%{BUILDTIME}"/>\
-\n  <size package="%{PACKAGESIZE}" installed="%{SIZE}" archive="%{ARCHIVESIZE}"/>\
-\n  <location %|PACKAGEBASEURL?{xml:base=\"%{PACKAGEBASEURL:cdata}\" }|href="%{PACKAGEORIGIN:bncdata}"/>\
-\n  <format>\
-%|license?{\
-\n    <rpm:license>%{LICENSE:cdata}</rpm:license>\
-}:{\
-\n    <rpm:license/>\
-}|\
-%|vendor?{\
-\n    <rpm:vendor>%{VENDOR:cdata}</rpm:vendor>\
-}:{\
-\n    <rpm:vendor/>\
-}|\
-%|group?{\
-\n    <rpm:group>%{GROUP:cdata}</rpm:group>\
-}:{\
-\n    <rpm:group/>\
-}|\
-%|buildhost?{\
-\n    <rpm:buildhost>%{BUILDHOST:cdata}</rpm:buildhost>\
-}:{\
-\n    <rpm:buildhost/>\
-}|\
-%|sourcerpm?{\
-\n    <rpm:sourcerpm>%{SOURCERPM:cdata}</rpm:sourcerpm>\
-}|\
-\n    <rpm:header-range start="%{HEADERSTARTOFF}" end="%{HEADERENDOFF}"/>\
-%|providename?{\
-\n    <rpm:provides>\
-[\
-\n      %{providexmlentry}\
-]\
-\n    </rpm:provides>\
-}:{\
-\n    <rpm:provides/>\
-\n}|\
-%|requirename?{\
-\n    <rpm:requires>\
-[\
-\n      %{requirexmlentry}\
-]\
-\n    </rpm:requires>\
-}:{\
-\n    <rpm:requires/>\
-}|\
-%|conflictname?{\
-\n    <rpm:conflicts>\
-[\
-\n      %{conflictxmlentry}\
-]\
-\n    </rpm:conflicts>\
-}:{\
-\n    <rpm:conflicts/>\
-}|\
-%|obsoletename?{\
-\n    <rpm:obsoletes>\
-[\
-\n      %{obsoletexmlentry}\
-]\
-\n    </rpm:obsoletes>\
-}:{\
-\n    <rpm:obsoletes/>\
-}|\
-%|filesxmlentry1?{\
-[\
-\n    %{filesxmlentry1}\
-]\
-}|\
-\n  </format>\
-\n</package>\
-\n' \
+rpm	alias --yum:primary.xml --qf @USRLIBRPM@/qf/yum_primary_xml \
 	--POPTdesc=$"display yum primary.xml markup"
 
-rpm	alias --yum:primary.sqlite --qf "\
-INSERT into packages values (\
-'%{DBINSTANCE}'\
-, '%|HDRID?{%{HDRID}}:{XXX}|'\
-,\n '%{NAME:sqlescape}'\
-, '%{ARCH:sqlescape}'\
-, '%{VERSION:sqlescape}'\
-, '%|EPOCH?{%{EPOCH}}:{0}|'\
-, '%{RELEASE:sqlescape}'\
-,\n '%{SUMMARY:sqlescape}'\
-,\n '%{DESCRIPTION:sqlescape}'\
-,\n '%|URL?{%{URL:sqlescape}}|'\
-, '%{PACKAGETIME}'\
-, '%{BUILDTIME}'\
-, '%|license?{%{LICENSE:sqlescape}}|'\
-,\n '%|vendor?{%{VENDOR:sqlescape}}|'\
-, '%|group?{%{GROUP:sqlescape}}|'\
-,\n '%|buildhost?{%{BUILDHOST:sqlescape}}|'\
-, '%|sourcerpm?{%{SOURCERPM:sqlescape}}|'\
-,\n '%{HEADERSTARTOFF}'\
-, '%{HEADERENDOFF}'\
-, '%|PACKAGER?{%{PACKAGER:sqlescape}}|'\
-, '%{PACKAGESIZE}'\
-, '%{SIZE}'\
-, '%{ARCHIVESIZE}'\
-,\n '%{PACKAGEORIGIN:bncdata}'\
-,\n '%{PACKAGEBASEURL:sqlescape}'\
-, 'sha'\
-);\
-%|providename?{[\
-\nINSERT into provides values (\
-%{providesqlentry}\
-);\
-]}|\
-%|conflictname?{[\
-\nINSERT into conflicts values (\
-%{conflictsqlentry}\
-);\
-]}|\
-%|obsoletename?{[\
-\nINSERT into obsoletes values (\
-%{conflictsqlentry}\
-);\
-]}|\
-%|requirename?{[\
-\nINSERT into requires values (\
-%{requiresqlentry}\
-);\
-]}|\
-%|basenames?{[\
-\nINSERT into files    values (\
-%{filessqlentry1}\
-);\
-]}|\
-\n"\
-	--POPTdesc=$"display yum primary.sqlite import"
-
-rpm	alias --yum:primary.yaml --qf '\
-Package:\
-\n  Id:          %|HDRID?{%{HDRID}}:{-}|\
-\n  Name:        %{NAME:yaml}\
-\n  Arch:        %{ARCH:yaml}\
-\n  Version:     %{VERSION:yaml}\
-\n  Epoch:       %|EPOCH?{%{EPOCH}}:{0}|\
-\n  Release:     %{RELEASE:yaml}\
-\n  Summary:     %{SUMMARY:yaml}\
-\n  Description: %{DESCRIPTION:yaml}\
-\n  Url:         %|URL?{%{URL:yaml}}:{-}|\
-\n  Filetime:    %{PACKAGETIME}\
-\n  Buildtime:   %{BUILDTIME}\
-\n  License:     %|license?{%{LICENSE:yaml}}:{-}|\
-\n  Vendor:      %|vendor?{%{VENDOR:yaml}}:{-}|\
-\n  Group:       %|group?{%{GROUP:yaml}}:{-}|\
-\n  Buildhost:   %|buildhost?{%{BUILDHOST:yaml}}:{-}|\
-\n  Sourcerpm:   %|sourcerpm?{%{SOURCERPM:yaml}}:{-}|\
-\n  Hdrstart:    %{HEADERSTARTOFF}\
-\n  Hdrend:      %{HEADERENDOFF}\
-\n  Packager:    %|PACKAGER?{%{PACKAGER:yaml}}:{-}|\
-\n  Packagesize: %{PACKAGESIZE}\
-\n  Size:        %{SIZE}\
-\n  Archivesize: %{ARCHIVESIZE}\
-\n  Location:    %{PACKAGEORIGIN:yaml}\
-\n  BaseURL:     %|PACKAGEBASEURL?{%{PACKAGEBASEURL:yaml}}:{-}|\
-\n  Idtype:      sha\
-\n  Rpm:\
-%|license?{\
-\n    License: 	 %{LICENSE:yaml}\
-}|\
-%|vendor?{\
-\n    Vendor:    %{VENDOR:yaml}\
-}|\
-%|group?{\
-\n    Group:     %{GROUP:yaml}\
-}|\
-%|buildhost?{\
-\n    Buildhost: %{BUILDHOST:yaml}\
-}|\
-%|sourcerpm?{\
-\n    Sourcerpm: %{SOURCERPM:yaml}\
-}|\
-\n    Hdrstart:  %{HEADERSTARTOFF}\
-\n    Hdrend:    %{HEADERENDOFF}\
-%|providexmlentry?{\
-\n    Provides:\
-[\
-\n      - %{providesqlentry}\
-]\
-}|\
-%|requirexmlentry?{\
-\n    Requires:\
-[\
-\n      - %{requiresqlentry}\
-]\
-}|\
-%|conflictxmlentry?{\
-\n    Conflicts:\
-[\
-\n      - %{conflictsqlentry}\
-]\
-}|\
-%|obsoletexmlentry?{\
-\n    Obsoletes:\
-[\
-\n      - %{obsoletesqlentry}\
-]\
-}|\
-%|filesxmlentry1?{\
-\n    Files:\
-[\
-\n      - %{filessqlentry1}\
-]\
-}|\
-\n'\
-	--POPTdesc=$"display yum primary.yaml markup"
-
-rpm	alias --yum:filelists.xml --qf '\
-<package pkgid="%|HDRID?{%{HDRID}}:{XXX}|" name="%{NAME:cdata}" arch="%{ARCH:cdata}">\
-\n  <version epoch="%|EPOCH?{%{EPOCH}}:{0}|" ver="%{VERSION:cdata}" rel="%{RELEASE:cdata}"/>\
-%|filesxmlentry2?{\
-[\
-\n  %{filesxmlentry2}\
-]\
-}|\
-\n</package>\
-\n' \
+rpm	alias --yum:filelists.xml --qf @USRLIBRPM@/qf/yum_filelists_xml \
 	--POPTdesc=$"display yum filelists.xml markup"
 
-rpm	alias --yum:filelists.sqlite --qf "\
-INSERT into packages values (\
-'%{DBINSTANCE}'\
-, '%|HDRID?{%{HDRID}}:{XXX}|'\
-);\
-%|basenames?{[\
-\nINSERT into filelist values (\
-%{filessqlentry2}\
-);\
-]}|\
-\n" \
-	--POPTdesc=$"display yum filelists.sqlite import"
-
-rpm	alias --yum:filelists.yaml --qf '\
-Filelists:\
-\n  Id:      %|HDRID?{%{HDRID}}:{XXX}|\
-\n  Name:    %{NAME:yaml}\
-\n  Arch:    %{ARCH:yaml}\
-\n  Epoch:   %|EPOCH?{%{EPOCH}}:{0}|\
-\n  Version: %{VERSION:yaml}\
-\n  Release: %{RELEASE:yaml}\
-\n  Files:\
-%|filesxmlentry2?{\
-[\
-\n    - %{filesxmlentry2}\
-]\
-}|\
-\n' \
-	--POPTdesc=$"display yum filelists.yaml markup"
-
-rpm	alias --yum:other.xml --qf '\
-<package pkgid="%|HDRID?{%{HDRID}}:{XXX}|" name="%{NAME:cdata}" arch="%{ARCH:cdata}">\
-\n  <version epoch="%|EPOCH?{%{EPOCH}}:{0}|" ver="%{VERSION:cdata}" rel="%{RELEASE:cdata}"/>\
-%|changelogname?{\
-[\
-\n  <changelog author="%{CHANGELOGNAME:cdata}" date="%{CHANGELOGTIME}">%{CHANGELOGTEXT:cdata}</changelog>\
-]\
-}:{\
-\n  <changelog/>\
-}|\
-\n</package>\
-\n' \
+rpm	alias --yum:other.xml --qf @USRLIBRPM@/qf/yum_other_xml \
 	--POPTdesc=$"display yum other.xml markup"
 
-rpm	alias --yum:other.sqlite --qf "\
-INSERT into packages values (\
-'%{DBINSTANCE}'\
-, '%|HDRID?{%{HDRID}}:{XXX}|'\
-);\
-%|changelogname?{[\
-\nINSERT into changelog values (\
-'XXX'\
-, '%{CHANGELOGNAME:sqlescape}'\
-, '%{CHANGELOGTIME}'\
-, '%{CHANGELOGTEXT:sqlescape}'\
-);\
-]}:{\
-\nINSERT into changelog values ('%{DBINSTANCE}', '', '', '');\
-}|\
-\n" \
-	--POPTdesc=$"display yum other.sqlite import"
+#==============================================================================
+rpm	alias --yum:primary.sqlite --qf @USRLIBRPM@/qf/yum_primary_sqlite \
+	--POPTdesc=$"display yum primary.sqlite import"
 
-rpm	alias --yum:other.yaml --qf '\
-Other:\
-\n  Id:      %|HDRID?{%{HDRID}}:{XXX}|\
-\n  Name:    %{NAME:yaml}\
-\n  Arch:    %{ARCH:yaml}\
-\n  Epoch:   %|EPOCH?{%{EPOCH}}:{0}|\
-\n  Version: %{VERSION:yaml}\
-\n  Release: %{RELEASE:yaml}\
-\n  Changelogs:\
-%|changelogname?{\
-[\
-\n    - <changelog author="%{CHANGELOGNAME:cdata}" date="%{CHANGELOGTIME}">%{CHANGELOGTEXT:cdata}</changelog>\
-]\
-}|\
-\n' \
-	--POPTdesc=$"display yum other.yaml markup"
+rpm	alias --yum:filelists.sqlite --qf @USRLIBRPM@/qf/yum_filelists_sqlite \
+	--POPTdesc=$"display yum filelists.sqlite import"
+
+rpm	alias --yum:other.sqlite --qf @USRLIBRPM@/qf/yum_other_sqlite \
+	--POPTdesc=$"display yum other.sqlite import"
 
 #==============================================================================
 rpm	alias --wnh:primary.yaml --qf @USRLIBRPM@/qf/wnh_primary_yaml \
